- Spawn Eggs No Longer Exist In Spawn Eggs Tab
- Renamned All Meats To Remove "Meat" Part of Their Name
- Scarab Tools Are Now Fire Resistant
- Internal Translation Keys Now Follow Vanilla Rules
- Internal Class Names More Consistent
- Fixed Cooked Dinosaur Meat Recipes
- (NeoForge) Fixed Compostables
- (Fabric) Fixed Animals Breaking Blocks Not Being Toggleable
- (Fabric) Fixed Animals Not Starving Not Being Toggleable
- Fixed Skeletons Not Working
- Fixed Skeletons Consuming Bones In Creative
- Fixed Skeleton's Bounding Box Sizes
- Fixed Anu Charging Texture
- Fixed Incubated Eggs Not Working
- Fixed Frog DNA Having No Recipe
- Fixed Sheep DNA Missing A Recipe
- Fixed Pregnant Animals Crashing
- Fixed Stegosaurus Model
- Fixed Ancient Armor Being Fixed With Netherite Ingot
- Fixed Ancient Armor Not Having Durability and Stacking
- Fixed Internal Typos
- Fixed Inconsistent Capitalisation With Subtitles
- (Fabric) Update Mixins Compatibility To Java 21
- Updated Smildon DNA Texture
- Updated Mammoth DNA Texture
- Updated Axolotl DNA Texture
- Updated Cat DNA Texture
- Updated Chicken DNA Texture
- Updated Cow DNA Texture
- Updated Dolphin DNA Texture
- Updated Donkey DNA Texture
- Updated Fox DNA Texture
- Updated Frog DNA Texture
- Updated Goat Model
- Updated Horse Model
- Updated Llama Model
- Updated Mule DNA Texture
- Updated Nautilus DNA Texture
- Updated Ocelot DNA Texture
- Updated Panda DNA Texture
- Updated Parrot DNA Texture
- Updated Pig DNA Texture
- Updated Polar Bear DNA Texture
- Updated Rabbit DNA Texture
- Updated Sheep DNA Texture
- Updated Wolf DNA Texture
- Updated Incubated Chicken Egg Texture
- Updated Incubated Parrot Egg Texture
- Updated Raw Mammoth Texture
- Updated Cooked Mammoth Texture
- Updated Raw Smildon Texture
- Updated Cooked Smildon Texture
- Added Axolotl DNA Recipe
- Added Velociraptor Skeleton
- Added "Legacy Models" Config Option
- Added Pachycephalosaurus
- Added Pachycephalosaurus DNA
- Added Pachycephalosaurus Egg