@@ -1,2 +1,2 @@
-// 1.21	2024-07-04T02:29:47.2605878	Languages: en_us for mod: fossilslegacy
-d74dc2000a14bf19389494de1baa447dcd78e9dc assets/fossilslegacy/lang/en_us.json
+// 1.21	2024-07-04T03:21:24.5987253	Languages: en_us for mod: fossilslegacy
+9e7c16aedfc835b16242bc21efea4e8f928ec574 assets/fossilslegacy/lang/en_us.json
