@@ -293,6 +293,7 @@
   "item.fossilslegacy.dolphin_dna": "Dolphin DNA",
   "item.fossilslegacy.dolphin_embryo_syringe": "Dolphin Embryo Syringe",
   "item.fossilslegacy.donkey_dna": "Donkey DNA",
+  "item.fossilslegacy.donkey_embryo_syringe": "Donkey Embryo Syringe",
   "item.fossilslegacy.failuresaurus_spawn_egg": "Failuresaurus Spawn Egg",
   "item.fossilslegacy.fossil": "Fossil",
   "item.fossilslegacy.fox_dna": "Fox DNA",
@@ -434,60 +435,6 @@
   "resourcePack.fossilslegacy.description": "Fossils and Archaeology: Legacy Assets",
   "resourcePack.fossilslegacy.fa_legacy_textures.description": "1.3.2 Assets",
   "resourcePack.fossilslegacy.fa_legacy_textures.name": "F/A Original Textures",
-  "sound.fossilslegacy.brachiosaurus.ambient": "Brachiosaurus Calls",
-  "sound.fossilslegacy.brachiosaurus.death": "Brachiosaurus Dies",
-  "sound.fossilslegacy.brachiosaurus.hurt": "Brachiosaurus Hurts",
-  "sound.fossilslegacy.carnotaurus.ambient": "Carnotaurus Grumbles",
-  "sound.fossilslegacy.carnotaurus.death": "Carnotaurus Dies",
-  "sound.fossilslegacy.carnotaurus.hurt": "Carnotaurus Hurts",
-  "sound.fossilslegacy.compsognathus.ambient": "Compsognathus Grumbles",
-  "sound.fossilslegacy.compsognathus.death": "Compsognathus Dies",
-  "sound.fossilslegacy.compsognathus.hurt": "Compsognathus Hurts",
-  "sound.fossilslegacy.cryolophosaurus.ambient": "Cryolophosaurus Grumbles",
-  "sound.fossilslegacy.cryolophosaurus.death": "Cryolophosaurus Dies",
-  "sound.fossilslegacy.cryolophosaurus.hurt": "Cryolophosaurus Hurts",
-  "sound.fossilslegacy.dilophosaurus.ambient": "Dilophosaurus Hisses",
-  "sound.fossilslegacy.dilophosaurus.call": "Dilophosaurus Calls",
-  "sound.fossilslegacy.dilophosaurus.death": "Dilophosaurus Dies",
-  "sound.fossilslegacy.dilophosaurus.hurt": "Dilophosaurus Hurts",
-  "sound.fossilslegacy.dodo.ambient": "Dodo Chirps",
-  "sound.fossilslegacy.dodo.death": "Dodo Dies",
-  "sound.fossilslegacy.dodo.hurt": "Dodo Hurts",
-  "sound.fossilslegacy.drum.hit": "Drum Hit",
-  "sound.fossilslegacy.drum.triple_hit": "Drum Triple Hit",
-  "sound.fossilslegacy.futabasaurus.ambient": "Futabasaurus Chirps",
-  "sound.fossilslegacy.futabasaurus.death": "Futabasaurus Dies",
-  "sound.fossilslegacy.futabasaurus.hurt": "Futabasaurus Hurts",
-  "sound.fossilslegacy.mammoth.ambient": "Mammoth Trumpets",
-  "sound.fossilslegacy.mammoth.death": "Mammoth Dies",
-  "sound.fossilslegacy.mammoth.hurt": "Mammoth Hurts",
-  "sound.fossilslegacy.pachycephalosaurus.ambient": "Pachycephalosaurus Chirps",
-  "sound.fossilslegacy.pachycephalosaurus.death": "Pachycephalosaurus Dies",
-  "sound.fossilslegacy.pachycephalosaurus.hurt": "Pachycephalosaurus Hurts",
-  "sound.fossilslegacy.pteranodon.ambient": "Pteranodon Calls",
-  "sound.fossilslegacy.pteranodon.death": "Pteranodon Dies",
-  "sound.fossilslegacy.pteranodon.hurt": "Pteranodon Hurts",
-  "sound.fossilslegacy.smilodon.ambient": "Smilodon Roars",
-  "sound.fossilslegacy.smilodon.death": "Smilodon Dies",
-  "sound.fossilslegacy.smilodon.hurt": "Smilodon Hurts",
-  "sound.fossilslegacy.stegosaurus.ambient": "Stegosaurus Calls",
-  "sound.fossilslegacy.stegosaurus.death": "Stegosaurus Dies",
-  "sound.fossilslegacy.stegosaurus.hurt": "Stegosaurus Hurts",
-  "sound.fossilslegacy.therizinosaurus.ambient": "Therizinosaurus Grumbles",
-  "sound.fossilslegacy.therizinosaurus.death": "Therizinosaurus Dies",
-  "sound.fossilslegacy.therizinosaurus.hurt": "Therizinosaurus Hurts",
-  "sound.fossilslegacy.triceratops.ambient": "Triceratops Calls",
-  "sound.fossilslegacy.triceratops.death": "Triceratops Dies",
-  "sound.fossilslegacy.triceratops.hurt": "Triceratops Hurts",
-  "sound.fossilslegacy.tyrannosaurus.ambient": "Tyrannosaurus Rumbles",
-  "sound.fossilslegacy.tyrannosaurus.attack": "Tyrannosaurus Roars",
-  "sound.fossilslegacy.tyrannosaurus.death": "Tyrannosaurus Dies",
-  "sound.fossilslegacy.tyrannosaurus.hurt": "Tyrannosaurus Hurts",
-  "sound.fossilslegacy.velociraptor.ambient.tame": "Velociraptor Whines",
-  "sound.fossilslegacy.velociraptor.ambient.wild": "Velociraptor Hisses",
-  "sound.fossilslegacy.velociraptor.attack": "Velociraptor Attacks",
-  "sound.fossilslegacy.velociraptor.death": "Velociraptor Dies",
-  "sound.fossilslegacy.velociraptor.hurt": "Velociraptor Hurts",
   "stone_tablet.fossilslegacy.anu_death.author": "Kajun",
   "stone_tablet.fossilslegacy.anu_death.title": "Anu's Death",
   "stone_tablet.fossilslegacy.future.author": "Kajun",
@@ -529,6 +476,60 @@
   "stone_tablet.fossilslegacy.tyrannosaurus_transport.title": "Tyrannosaurus Transport",
   "stone_tablet.fossilslegacy.zombie_and_spider.author": "Kajun",
   "stone_tablet.fossilslegacy.zombie_and_spider.title": "Zombie and Spider",
+  "subtitles.block.drum.hit": "Drum hit",
+  "subtitles.block.drum.triple_hit": "Drum triple hit",
+  "subtitles.entity.brachiosaurus.ambient": "Brachiosaurus calls",
+  "subtitles.entity.brachiosaurus.death": "Brachiosaurus dies",
+  "subtitles.entity.brachiosaurus.hurt": "Brachiosaurus hurts",
+  "subtitles.entity.carnotaurus.ambient": "Carnotaurus grumbles",
+  "subtitles.entity.carnotaurus.death": "Carnotaurus dies",
+  "subtitles.entity.carnotaurus.hurt": "Carnotaurus hurts",
+  "subtitles.entity.compsognathus.ambient": "Compsognathus chirps",
+  "subtitles.entity.compsognathus.death": "Compsognathus dies",
+  "subtitles.entity.compsognathus.hurt": "Compsognathus hurts",
+  "subtitles.entity.cryolophosaurus.ambient": "Cryolophosaurus grumbles",
+  "subtitles.entity.cryolophosaurus.death": "Cryolophosaurus dies",
+  "subtitles.entity.cryolophosaurus.hurt": "Cryolophosaurus hurts",
+  "subtitles.entity.dilophosaurus.ambient": "Dilophosaurus hisses",
+  "subtitles.entity.dilophosaurus.call": "Dilophosaurus calls",
+  "subtitles.entity.dilophosaurus.death": "Dilophosaurus dies",
+  "subtitles.entity.dilophosaurus.hurt": "Dilophosaurus hurts",
+  "subtitles.entity.dodo.ambient": "Dodo hoots",
+  "subtitles.entity.dodo.death": "Dodo dies",
+  "subtitles.entity.dodo.hurt": "Dodo hurts",
+  "subtitles.entity.futabasaurus.ambient": "Futabasaurus chirps",
+  "subtitles.entity.futabasaurus.death": "Futabasaurus dies",
+  "subtitles.entity.futabasaurus.hurt": "Futabasaurus hurts",
+  "subtitles.entity.mammoth.ambient": "Mammoth trumpets",
+  "subtitles.entity.mammoth.death": "Mammoth dies",
+  "subtitles.entity.mammoth.hurt": "Mammoth hurts",
+  "subtitles.entity.pachycephalosaurus.ambient": "Pachycephalosaurus chirps",
+  "subtitles.entity.pachycephalosaurus.death": "Pachycephalosaurus dies",
+  "subtitles.entity.pachycephalosaurus.hurt": "Pachycephalosaurus hurts",
+  "subtitles.entity.pteranodon.ambient": "Pteranodon calls",
+  "subtitles.entity.pteranodon.death": "Pteranodon dies",
+  "subtitles.entity.pteranodon.hurt": "Pteranodon hurts",
+  "subtitles.entity.smilodon.ambient": "Smilodon roars",
+  "subtitles.entity.smilodon.death": "Smilodon dies",
+  "subtitles.entity.smilodon.hurt": "Smilodon hurts",
+  "subtitles.entity.stegosaurus.ambient": "Stegosaurus calls",
+  "subtitles.entity.stegosaurus.death": "Stegosaurus dies",
+  "subtitles.entity.stegosaurus.hurt": "Stegosaurus hurts",
+  "subtitles.entity.therizinosaurus.ambient": "Therizinosaurus grumbles",
+  "subtitles.entity.therizinosaurus.death": "Therizinosaurus dies",
+  "subtitles.entity.therizinosaurus.hurt": "Therizinosaurus hurts",
+  "subtitles.entity.triceratops.ambient": "Triceratops calls",
+  "subtitles.entity.triceratops.death": "Triceratops dies",
+  "subtitles.entity.triceratops.hurt": "Triceratops hurts",
+  "subtitles.entity.tyrannosaurus.ambient": "Tyrannosaurus rumbles",
+  "subtitles.entity.tyrannosaurus.attack": "Tyrannosaurus roars",
+  "subtitles.entity.tyrannosaurus.death": "Tyrannosaurus dies",
+  "subtitles.entity.tyrannosaurus.hurt": "Tyrannosaurus hurts",
+  "subtitles.entity.velociraptor.ambient.tame": "Velociraptor whines",
+  "subtitles.entity.velociraptor.ambient.wild": "Velociraptor hisses",
+  "subtitles.entity.velociraptor.attack": "Velociraptor attacks",
+  "subtitles.entity.velociraptor.death": "Velociraptor dies",
+  "subtitles.entity.velociraptor.hurt": "Velociraptor hurts",
   "text.autoconfig.fossilslegacy.category.common": "Common Options",
   "text.autoconfig.fossilslegacy.category.server": "Server Options",
   "text.autoconfig.fossilslegacy.option.common.animalsBreakBlocks": "Animals Break Blocks",
