@@ -554,60 +554,60 @@ public class FossilsLegacyLanguageProvider extends SimpleLanguageProvider {
         this.add("stone_tablet.fossilslegacy.random", "Random variant");
 
         // Sounds
-        this.add("sound.fossilslegacy.brachiosaurus.ambient", "Brachiosaurus Calls");
-        this.add("sound.fossilslegacy.brachiosaurus.hurt", "Brachiosaurus Hurts");
-        this.add("sound.fossilslegacy.brachiosaurus.death", "Brachiosaurus Dies");
-        this.add("sound.fossilslegacy.carnotaurus.ambient", "Carnotaurus Grumbles");
-        this.add("sound.fossilslegacy.carnotaurus.hurt", "Carnotaurus Hurts");
-        this.add("sound.fossilslegacy.carnotaurus.death", "Carnotaurus Dies");
-        this.add("sound.fossilslegacy.compsognathus.ambient", "Compsognathus Grumbles");
-        this.add("sound.fossilslegacy.compsognathus.hurt", "Compsognathus Hurts");
-        this.add("sound.fossilslegacy.compsognathus.death", "Compsognathus Dies");
-        this.add("sound.fossilslegacy.cryolophosaurus.ambient", "Cryolophosaurus Grumbles");
-        this.add("sound.fossilslegacy.cryolophosaurus.hurt", "Cryolophosaurus Hurts");
-        this.add("sound.fossilslegacy.cryolophosaurus.death", "Cryolophosaurus Dies");
-        this.add("sound.fossilslegacy.dilophosaurus.ambient", "Dilophosaurus Hisses");
-        this.add("sound.fossilslegacy.dilophosaurus.call", "Dilophosaurus Calls");
-        this.add("sound.fossilslegacy.dilophosaurus.hurt", "Dilophosaurus Hurts");
-        this.add("sound.fossilslegacy.dilophosaurus.death", "Dilophosaurus Dies");
-        this.add("sound.fossilslegacy.dodo.ambient", "Dodo Chirps");
-        this.add("sound.fossilslegacy.dodo.hurt", "Dodo Hurts");
-        this.add("sound.fossilslegacy.dodo.death", "Dodo Dies");
-        this.add("sound.fossilslegacy.drum.hit", "Drum Hit");
-        this.add("sound.fossilslegacy.drum.triple_hit", "Drum Triple Hit");
-        this.add("sound.fossilslegacy.mammoth.ambient", "Mammoth Trumpets");
-        this.add("sound.fossilslegacy.mammoth.hurt", "Mammoth Hurts");
-        this.add("sound.fossilslegacy.mammoth.death", "Mammoth Dies");
-        this.add("sound.fossilslegacy.futabasaurus.ambient", "Futabasaurus Chirps");
-        this.add("sound.fossilslegacy.futabasaurus.hurt", "Futabasaurus Hurts");
-        this.add("sound.fossilslegacy.futabasaurus.death", "Futabasaurus Dies");
-        this.add("sound.fossilslegacy.pachycephalosaurus.ambient", "Pachycephalosaurus Chirps");
-        this.add("sound.fossilslegacy.pachycephalosaurus.hurt", "Pachycephalosaurus Hurts");
-        this.add("sound.fossilslegacy.pachycephalosaurus.death", "Pachycephalosaurus Dies");
-        this.add("sound.fossilslegacy.pteranodon.ambient", "Pteranodon Calls");
-        this.add("sound.fossilslegacy.pteranodon.hurt", "Pteranodon Hurts");
-        this.add("sound.fossilslegacy.pteranodon.death", "Pteranodon Dies");
-        this.add("sound.fossilslegacy.smilodon.ambient", "Smilodon Roars");
-        this.add("sound.fossilslegacy.smilodon.hurt", "Smilodon Hurts");
-        this.add("sound.fossilslegacy.smilodon.death", "Smilodon Dies");
-        this.add("sound.fossilslegacy.stegosaurus.ambient", "Stegosaurus Calls");
-        this.add("sound.fossilslegacy.stegosaurus.hurt", "Stegosaurus Hurts");
-        this.add("sound.fossilslegacy.stegosaurus.death", "Stegosaurus Dies");
-        this.add("sound.fossilslegacy.triceratops.ambient", "Triceratops Calls");
-        this.add("sound.fossilslegacy.triceratops.hurt", "Triceratops Hurts");
-        this.add("sound.fossilslegacy.triceratops.death", "Triceratops Dies");
-        this.add("sound.fossilslegacy.therizinosaurus.ambient", "Therizinosaurus Grumbles");
-        this.add("sound.fossilslegacy.therizinosaurus.hurt", "Therizinosaurus Hurts");
-        this.add("sound.fossilslegacy.therizinosaurus.death", "Therizinosaurus Dies");
-        this.add("sound.fossilslegacy.tyrannosaurus.ambient", "Tyrannosaurus Rumbles");
-        this.add("sound.fossilslegacy.tyrannosaurus.attack", "Tyrannosaurus Roars");
-        this.add("sound.fossilslegacy.tyrannosaurus.hurt", "Tyrannosaurus Hurts");
-        this.add("sound.fossilslegacy.tyrannosaurus.death", "Tyrannosaurus Dies");
-        this.add("sound.fossilslegacy.velociraptor.ambient.tame", "Velociraptor Whines");
-        this.add("sound.fossilslegacy.velociraptor.ambient.wild", "Velociraptor Hisses");
-        this.add("sound.fossilslegacy.velociraptor.attack", "Velociraptor Attacks");
-        this.add("sound.fossilslegacy.velociraptor.hurt", "Velociraptor Hurts");
-        this.add("sound.fossilslegacy.velociraptor.death", "Velociraptor Dies");
+        this.add("subtitles.entity.brachiosaurus.ambient", "Brachiosaurus calls");
+        this.add("subtitles.entity.brachiosaurus.hurt", "Brachiosaurus hurts");
+        this.add("subtitles.entity.brachiosaurus.death", "Brachiosaurus dies");
+        this.add("subtitles.entity.carnotaurus.ambient", "Carnotaurus grumbles");
+        this.add("subtitles.entity.carnotaurus.hurt", "Carnotaurus hurts");
+        this.add("subtitles.entity.carnotaurus.death", "Carnotaurus dies");
+        this.add("subtitles.entity.compsognathus.ambient", "Compsognathus chirps");
+        this.add("subtitles.entity.compsognathus.hurt", "Compsognathus hurts");
+        this.add("subtitles.entity.compsognathus.death", "Compsognathus dies");
+        this.add("subtitles.entity.cryolophosaurus.ambient", "Cryolophosaurus grumbles");
+        this.add("subtitles.entity.cryolophosaurus.hurt", "Cryolophosaurus hurts");
+        this.add("subtitles.entity.cryolophosaurus.death", "Cryolophosaurus dies");
+        this.add("subtitles.entity.dilophosaurus.ambient", "Dilophosaurus hisses");
+        this.add("subtitles.entity.dilophosaurus.call", "Dilophosaurus calls");
+        this.add("subtitles.entity.dilophosaurus.hurt", "Dilophosaurus hurts");
+        this.add("subtitles.entity.dilophosaurus.death", "Dilophosaurus dies");
+        this.add("subtitles.entity.dodo.ambient", "Dodo hoots");
+        this.add("subtitles.entity.dodo.hurt", "Dodo hurts");
+        this.add("subtitles.entity.dodo.death", "Dodo dies");
+        this.add("subtitles.block.drum.hit", "Drum hit");
+        this.add("subtitles.block.drum.triple_hit", "Drum triple hit");
+        this.add("subtitles.entity.mammoth.ambient", "Mammoth trumpets");
+        this.add("subtitles.entity.mammoth.hurt", "Mammoth hurts");
+        this.add("subtitles.entity.mammoth.death", "Mammoth dies");
+        this.add("subtitles.entity.futabasaurus.ambient", "Futabasaurus chirps");
+        this.add("subtitles.entity.futabasaurus.hurt", "Futabasaurus hurts");
+        this.add("subtitles.entity.futabasaurus.death", "Futabasaurus dies");
+        this.add("subtitles.entity.pachycephalosaurus.ambient", "Pachycephalosaurus chirps");
+        this.add("subtitles.entity.pachycephalosaurus.hurt", "Pachycephalosaurus hurts");
+        this.add("subtitles.entity.pachycephalosaurus.death", "Pachycephalosaurus dies");
+        this.add("subtitles.entity.pteranodon.ambient", "Pteranodon calls");
+        this.add("subtitles.entity.pteranodon.hurt", "Pteranodon hurts");
+        this.add("subtitles.entity.pteranodon.death", "Pteranodon dies");
+        this.add("subtitles.entity.smilodon.ambient", "Smilodon roars");
+        this.add("subtitles.entity.smilodon.hurt", "Smilodon hurts");
+        this.add("subtitles.entity.smilodon.death", "Smilodon dies");
+        this.add("subtitles.entity.stegosaurus.ambient", "Stegosaurus calls");
+        this.add("subtitles.entity.stegosaurus.hurt", "Stegosaurus hurts");
+        this.add("subtitles.entity.stegosaurus.death", "Stegosaurus dies");
+        this.add("subtitles.entity.triceratops.ambient", "Triceratops calls");
+        this.add("subtitles.entity.triceratops.hurt", "Triceratops hurts");
+        this.add("subtitles.entity.triceratops.death", "Triceratops dies");
+        this.add("subtitles.entity.therizinosaurus.ambient", "Therizinosaurus grumbles");
+        this.add("subtitles.entity.therizinosaurus.hurt", "Therizinosaurus hurts");
+        this.add("subtitles.entity.therizinosaurus.death", "Therizinosaurus dies");
+        this.add("subtitles.entity.tyrannosaurus.ambient", "Tyrannosaurus rumbles");
+        this.add("subtitles.entity.tyrannosaurus.attack", "Tyrannosaurus roars");
+        this.add("subtitles.entity.tyrannosaurus.hurt", "Tyrannosaurus hurts");
+        this.add("subtitles.entity.tyrannosaurus.death", "Tyrannosaurus dies");
+        this.add("subtitles.entity.velociraptor.ambient.tame", "Velociraptor whines");
+        this.add("subtitles.entity.velociraptor.ambient.wild", "Velociraptor hisses");
+        this.add("subtitles.entity.velociraptor.attack", "Velociraptor attacks");
+        this.add("subtitles.entity.velociraptor.hurt", "Velociraptor hurts");
+        this.add("subtitles.entity.velociraptor.death", "Velociraptor dies");
 
         // Upgrades
         this.add("upgrade.fossilslegacy.scarab_gem_upgrade", "Scarab Gem Upgrade");
